# binance-rs

./: .gitmodules  Cargo.toml  README.md
examples/: binance_endpoints.rs  binance_futures_endpoints.rs  binance_futures_userstream.rs  binance_websockets.rs
src/: account.rs  api.rs  client.rs  config.rs  errors.rs  general.rs  lib.rs  market.rs  model.rs  savings.rs  userstream.rs  util.rs  websockets.rs
src/futures/: account.rs  general.rs  market.rs  model.rs  user_stream.rs  userstream.rs  websockets.rs
src/spot/: account.rs  general.rs  market.rs  mod.rs  model.rs  user_stream.rs  websockets.rs
tests/: account_tests.rs  futures_account_tests.rs  futures_market_test.rs  general_tests.rs  market_tests.rs  util_tests.rs
