[package]
name = "binance"
version = "0.20.2"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
edition = "2018"
rust-version = "1.74"                               # MSRV

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance/"
repository = "https://github.com/wisespace-io/binance-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/binance-rs" }

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0"
hmac = "0"
sha2 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
error-chain = { version = "0", default-features = false }
reqwest = { version = "0", features = ["json", "stream"] }
url = "2"
rust_decimal = { version = "1", features = ["serde-with-str"] }
tracing = "0"
bytes = "1"
futures-util = "0"
humantime = "2"
tokio-tungstenite = { version = "0", features = ["native-tls", "connect"] }
tokio = { version = "1", features = ["net"] }

[features]
vendored-tls = [
    "reqwest/native-tls-vendored",
    "tokio-tungstenite/native-tls-vendored",
]

[dev-dependencies]
csv = "1"
mockito = "1"
env_logger = "0"
criterion = "0"
tokio = { version = "1", features = ["full"] }
float-cmp = "0"
serde_json = "1"
